<resources>
    <string name="app_name">DragonBall</string>
    <string name="dragonball_app">DragonBall App</string>
    <string name="insert_user">username</string>
    <string name="insert_password">password</string>
    <string name="login">Login</string>
    <string name="remember_user">Remember me</string>
    <string name="hit">Hit</string>
    <string name="heal">Heal</string>
    <string name="count">Selected counter</string>
</resources>