<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity"
    android:gravity="center_horizontal"
    android:background="@mipmap/db_login_vertical"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"

        android:text="@string/dragonball_app"
        android:textColor="#FF9800"
        android:textSize="34sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/light_orange">
            <EditText
                android:id="@+id/etUser"
                android:height="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_user"/>

            <EditText
                android:id="@+id/etPassword"
                android:height="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_password"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbRememberUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_user"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/red"
        android:visibility="invisible" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textColor="@color/gray"
        android:layout_margin="12dp"
        android:text="@string/login"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
</LinearLayout>